--- a/all_fragments_validation.ipynb
+++ b/all_fragments_validation.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n"
+      "/home/pvk/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/cuda/__init__.py:107: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at ../c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "import torch.utils.data as data\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "import utils\n",
+    "from utils import *\n",
     "\n",
     "%load_ext memory_profiler"
    ]
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -116,8 +116,6 @@
     }
    ],
    "source": [
-    "# test show_labels_with_rects\n",
-    "from utils import show_labels_with_rects\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "show_labels_with_rects([1, 2, 3], BASE_PREFIX, VALIDATION_RECTS)\n",
@@ -126,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -134,12 +132,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5c7f68ca9c142f4b1c925f363071a15",
+       "model_id": "5fac905a81a54184aaa139dbb3727d1f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/32 [00:00<?, ?it/s]"
+       "Loading fragment 1:   0%|          | 0/32 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -148,12 +146,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e8189f0d6cd4cabbf566d8990ebc082",
+       "model_id": "214102f316db4b998976a7478561084c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/32 [00:00<?, ?it/s]"
+       "Loading fragment 2:   0%|          | 0/32 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -162,12 +160,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfaef279077241fa9f5cd5f22132fd76",
+       "model_id": "030267f768154afa8ca7b530e92f2048",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/32 [00:00<?, ?it/s]"
+       "Loading fragment 3:   0%|          | 0/32 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -179,56 +177,56 @@
      "text": [
       "Num items (pixels) for training set: 150176631\n",
       "Num items (pixels) for validation set: 1999953\n",
-      "(tensor([[[[0.4800, 0.4522, 0.4418,  ..., 0.5187, 0.5168, 0.5192],\n",
-      "          [0.4918, 0.4807, 0.4654,  ..., 0.5468, 0.5520, 0.5545],\n",
-      "          [0.5196, 0.4998, 0.4682,  ..., 0.4991, 0.5302, 0.5516],\n",
+      "(tensor([[[[0.3876, 0.3896, 0.3971,  ..., 0.4765, 0.4668, 0.4456],\n",
+      "          [0.3524, 0.3628, 0.3897,  ..., 0.4343, 0.4095, 0.3821],\n",
+      "          [0.3259, 0.3424, 0.3855,  ..., 0.3523, 0.3229, 0.2994],\n",
       "          ...,\n",
-      "          [0.1516, 0.1443, 0.1425,  ..., 0.2136, 0.2229, 0.2397],\n",
-      "          [0.1327, 0.1342, 0.1345,  ..., 0.2323, 0.2506, 0.2680],\n",
-      "          [0.1412, 0.1430, 0.1454,  ..., 0.2464, 0.2617, 0.2752]],\n",
+      "          [0.5899, 0.5950, 0.5912,  ..., 0.1905, 0.1640, 0.1549],\n",
+      "          [0.5722, 0.5788, 0.5704,  ..., 0.1787, 0.1323, 0.0899],\n",
+      "          [0.5280, 0.5368, 0.5300,  ..., 0.1615, 0.1507, 0.1473]],\n",
       "\n",
-      "         [[0.4294, 0.4136, 0.3825,  ..., 0.5026, 0.5153, 0.5296],\n",
-      "          [0.4242, 0.4112, 0.3989,  ..., 0.5373, 0.5493, 0.5581],\n",
-      "          [0.4512, 0.4314, 0.4052,  ..., 0.5035, 0.5291, 0.5484],\n",
+      "         [[0.3919, 0.3898, 0.3908,  ..., 0.4489, 0.4346, 0.4193],\n",
+      "          [0.3592, 0.3688, 0.3903,  ..., 0.3800, 0.3509, 0.3280],\n",
+      "          [0.3295, 0.3479, 0.3887,  ..., 0.2852, 0.2529, 0.2342],\n",
       "          ...,\n",
-      "          [0.1852, 0.1705, 0.1634,  ..., 0.1875, 0.1889, 0.1982],\n",
-      "          [0.1474, 0.1455, 0.1427,  ..., 0.2130, 0.2220, 0.2309],\n",
-      "          [0.1555, 0.1539, 0.1490,  ..., 0.2300, 0.2371, 0.2428]],\n",
+      "          [0.5488, 0.5428, 0.5171,  ..., 0.1709, 0.1229, 0.0969],\n",
+      "          [0.5258, 0.5207, 0.4991,  ..., 0.1389, 0.0900, 0.0545],\n",
+      "          [0.4874, 0.4851, 0.4727,  ..., 0.1153, 0.1304, 0.1647]],\n",
       "\n",
-      "         [[0.3478, 0.3288, 0.3083,  ..., 0.4551, 0.4873, 0.5185],\n",
-      "          [0.3353, 0.3264, 0.3218,  ..., 0.4736, 0.5126, 0.5310],\n",
-      "          [0.3651, 0.3430, 0.3270,  ..., 0.4588, 0.4916, 0.5168],\n",
+      "         [[0.4012, 0.3922, 0.3851,  ..., 0.3979, 0.3814, 0.3737],\n",
+      "          [0.3807, 0.3863, 0.3993,  ..., 0.3091, 0.2816, 0.2674],\n",
+      "          [0.3593, 0.3731, 0.4045,  ..., 0.2257, 0.1975, 0.1892],\n",
       "          ...,\n",
-      "          [0.2401, 0.2126, 0.1954,  ..., 0.1928, 0.1860, 0.1905],\n",
-      "          [0.1632, 0.1550, 0.1499,  ..., 0.2119, 0.2139, 0.2175],\n",
-      "          [0.1735, 0.1668, 0.1542,  ..., 0.2317, 0.2319, 0.2309]],\n",
+      "          [0.5071, 0.4985, 0.4718,  ..., 0.1716, 0.1154, 0.0822],\n",
+      "          [0.4796, 0.4739, 0.4545,  ..., 0.1298, 0.0907, 0.0694],\n",
+      "          [0.4519, 0.4476, 0.4368,  ..., 0.1102, 0.1510, 0.2136]],\n",
       "\n",
       "         ...,\n",
       "\n",
-      "         [[0.3550, 0.3543, 0.3527,  ..., 0.3746, 0.3674, 0.3621],\n",
-      "          [0.3498, 0.3516, 0.3487,  ..., 0.3553, 0.3544, 0.3513],\n",
-      "          [0.3517, 0.3530, 0.3517,  ..., 0.3600, 0.3565, 0.3521],\n",
+      "         [[0.3317, 0.3408, 0.3475,  ..., 0.4140, 0.4308, 0.4473],\n",
+      "          [0.3383, 0.3462, 0.3554,  ..., 0.3989, 0.4172, 0.4295],\n",
+      "          [0.3397, 0.3476, 0.3584,  ..., 0.3761, 0.3898, 0.4128],\n",
       "          ...,\n",
-      "          [0.3711, 0.3706, 0.3659,  ..., 0.3673, 0.3760, 0.3810],\n",
-      "          [0.3738, 0.3733, 0.3712,  ..., 0.3843, 0.3882, 0.3943],\n",
-      "          [0.3781, 0.3833, 0.3836,  ..., 0.3778, 0.3767, 0.3818]],\n",
+      "          [0.3258, 0.3194, 0.3161,  ..., 0.2878, 0.2909, 0.2981],\n",
+      "          [0.3305, 0.3257, 0.3222,  ..., 0.2992, 0.3088, 0.3146],\n",
+      "          [0.3276, 0.3253, 0.3268,  ..., 0.3186, 0.3256, 0.3325]],\n",
       "\n",
-      "         [[0.3452, 0.3445, 0.3422,  ..., 0.3861, 0.3763, 0.3668],\n",
-      "          [0.3444, 0.3427, 0.3397,  ..., 0.3566, 0.3564, 0.3540],\n",
-      "          [0.3477, 0.3471, 0.3443,  ..., 0.3655, 0.3591, 0.3539],\n",
+      "         [[0.3102, 0.3187, 0.3283,  ..., 0.3689, 0.3848, 0.3958],\n",
+      "          [0.3126, 0.3156, 0.3215,  ..., 0.3612, 0.3788, 0.3906],\n",
+      "          [0.3148, 0.3226, 0.3304,  ..., 0.3580, 0.3742, 0.3959],\n",
       "          ...,\n",
-      "          [0.3685, 0.3683, 0.3654,  ..., 0.3652, 0.3668, 0.3698],\n",
-      "          [0.3738, 0.3799, 0.3830,  ..., 0.3831, 0.3865, 0.3904],\n",
-      "          [0.3756, 0.3795, 0.3797,  ..., 0.3841, 0.3833, 0.3873]],\n",
+      "          [0.3315, 0.3243, 0.3168,  ..., 0.3123, 0.3109, 0.3129],\n",
+      "          [0.3319, 0.3269, 0.3208,  ..., 0.3251, 0.3342, 0.3397],\n",
+      "          [0.3268, 0.3248, 0.3231,  ..., 0.3336, 0.3408, 0.3491]],\n",
       "\n",
-      "         [[0.3323, 0.3330, 0.3325,  ..., 0.3930, 0.3841, 0.3718],\n",
-      "          [0.3379, 0.3341, 0.3313,  ..., 0.3558, 0.3559, 0.3556],\n",
-      "          [0.3397, 0.3369, 0.3358,  ..., 0.3680, 0.3666, 0.3603],\n",
+      "         [[0.3086, 0.3152, 0.3231,  ..., 0.3299, 0.3391, 0.3288],\n",
+      "          [0.3125, 0.3113, 0.3126,  ..., 0.3290, 0.3436, 0.3562],\n",
+      "          [0.3130, 0.3191, 0.3277,  ..., 0.3395, 0.3570, 0.3798],\n",
       "          ...,\n",
-      "          [0.3612, 0.3617, 0.3632,  ..., 0.3544, 0.3530, 0.3532],\n",
-      "          [0.3681, 0.3771, 0.3806,  ..., 0.3715, 0.3741, 0.3759],\n",
-      "          [0.3766, 0.3783, 0.3717,  ..., 0.3799, 0.3825, 0.3833]]]]), tensor([0.]))\n",
-      "peak memory: 49191.00 MiB, increment: 48713.19 MiB\n"
+      "          [0.3315, 0.3266, 0.3204,  ..., 0.3343, 0.3325, 0.3369],\n",
+      "          [0.3356, 0.3314, 0.3242,  ..., 0.3414, 0.3469, 0.3545],\n",
+      "          [0.3254, 0.3266, 0.3255,  ..., 0.3463, 0.3493, 0.3577]]]]), tensor([0.]))\n",
+      "peak memory: 48676.93 MiB, increment: 38404.26 MiB\n"
      ]
     }
    ],
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -265,7 +263,7 @@
        "168"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -357,11 +355,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: unspecified launch failure\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mInkDetector\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDEVICE\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/nn/modules/module.py:1145\u001b[0m, in \u001b[0;36mModule.to\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1141\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m t\u001b[38;5;241m.\u001b[39mto(device, dtype \u001b[38;5;28;01mif\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_floating_point() \u001b[38;5;129;01mor\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_complex() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   1142\u001b[0m                     non_blocking, memory_format\u001b[38;5;241m=\u001b[39mconvert_to_format)\n\u001b[1;32m   1143\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m t\u001b[38;5;241m.\u001b[39mto(device, dtype \u001b[38;5;28;01mif\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_floating_point() \u001b[38;5;129;01mor\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_complex() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, non_blocking)\n\u001b[0;32m-> 1145\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_apply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconvert\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/nn/modules/module.py:797\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    795\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_apply\u001b[39m(\u001b[38;5;28mself\u001b[39m, fn):\n\u001b[1;32m    796\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m module \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchildren():\n\u001b[0;32m--> 797\u001b[0m         \u001b[43mmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_apply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    799\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[1;32m    800\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[1;32m    801\u001b[0m             \u001b[38;5;66;03m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[1;32m    802\u001b[0m             \u001b[38;5;66;03m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    807\u001b[0m             \u001b[38;5;66;03m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[1;32m    808\u001b[0m             \u001b[38;5;66;03m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/nn/modules/module.py:797\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    795\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_apply\u001b[39m(\u001b[38;5;28mself\u001b[39m, fn):\n\u001b[1;32m    796\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m module \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchildren():\n\u001b[0;32m--> 797\u001b[0m         \u001b[43mmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_apply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    799\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[1;32m    800\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[1;32m    801\u001b[0m             \u001b[38;5;66;03m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[1;32m    802\u001b[0m             \u001b[38;5;66;03m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    807\u001b[0m             \u001b[38;5;66;03m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[1;32m    808\u001b[0m             \u001b[38;5;66;03m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/nn/modules/module.py:820\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn)\u001b[0m\n\u001b[1;32m    816\u001b[0m \u001b[38;5;66;03m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[1;32m    817\u001b[0m \u001b[38;5;66;03m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[1;32m    818\u001b[0m \u001b[38;5;66;03m# `with torch.no_grad():`\u001b[39;00m\n\u001b[1;32m    819\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m--> 820\u001b[0m     param_applied \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparam\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    821\u001b[0m should_use_set_data \u001b[38;5;241m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[1;32m    822\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m should_use_set_data:\n",
+      "File \u001b[0;32m~/Documents/python/ML/scrolls/.venv/lib/python3.11/site-packages/torch/nn/modules/module.py:1143\u001b[0m, in \u001b[0;36mModule.to.<locals>.convert\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m   1140\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m convert_to_format \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m t\u001b[38;5;241m.\u001b[39mdim() \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m):\n\u001b[1;32m   1141\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m t\u001b[38;5;241m.\u001b[39mto(device, dtype \u001b[38;5;28;01mif\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_floating_point() \u001b[38;5;129;01mor\u001b[39;00m t\u001b[38;5;241m.\u001b[39mis_complex() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m   1142\u001b[0m                 non_blocking, memory_format\u001b[38;5;241m=\u001b[39mconvert_to_format)\n\u001b[0;32m-> 1143\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_floating_point\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_complex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnon_blocking\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: unspecified launch failure\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n"
+     ]
+    }
+   ],
    "source": [
     "model = InkDetector().to(DEVICE)"
    ]
