--- a/all_fragments_validation.ipynb
+++ b/all_fragments_validation.ipynb
@@ -9,20 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import gc\n",
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -79,16 +70,13 @@
    ],
    "source": [
     "BASE_PREFIX = 'data/' # change to your data folder\n",
-    "TRAIN_PREFIX = BASE_PREFIX + 'train/'\n",
-    "TEST_PREFIX = BASE_PREFIX + 'test/'\n",
-    "MODEL_SAVE_PATH = 'trained_models/model2.pt'\n",
     "VALIDATION_RECTS = [(1100, 3500, 700, 950),  # validation patch to remove from each training fragment\n",
     "                    (2200, 10800, 700, 950),\n",
     "                    (2100, 4400, 700, 950)]\n",
     "BUFFER = 30  # Buffer size in x and y direction\n",
     "Z_START = 16 # First slice in the z direction to use\n",
     "Z_DIM = 32   # Number of slices in the z direction\n",
-    "TRAINING_EPOCHS = 30000\n",
+    "# TRAINING_EPOCHS = 30000\n",
     "VALIDATION_EPOCHS = 1000\n",
     "LEARNING_RATE = 0.03\n",
     "BATCH_SIZE = 32\n",
@@ -98,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -122,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -130,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7963d8e6ab2e42949320da4c40da27ec",
+       "model_id": "f2c8d3ad13284afcbebc3fae70a5a6b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e7cff14f83445008e3f67a87c4399a1",
+       "model_id": "e660b33636d942ce8c6659837b27bcc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6798fc9ca72f45969a95d58ee94ba726",
+       "model_id": "ce16473eff9643258b30e8823953322f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,55 +163,55 @@
      "text": [
       "Num items (pixels) for training set: 150176631\n",
       "Num items (pixels) for validation set: 1999953\n",
-      "(tensor([[[[0.7154, 0.7014, 0.6911,  ..., 0.5680, 0.5174, 0.4677],\n",
-      "          [0.6322, 0.6181, 0.6088,  ..., 0.6138, 0.5805, 0.5354],\n",
-      "          [0.6193, 0.6057, 0.5993,  ..., 0.7025, 0.6962, 0.6340],\n",
+      "(tensor([[[[0.7076, 0.6518, 0.5304,  ..., 0.3504, 0.3486, 0.3385],\n",
+      "          [0.6918, 0.6383, 0.5176,  ..., 0.3630, 0.3554, 0.3462],\n",
+      "          [0.6369, 0.5892, 0.4754,  ..., 0.3770, 0.3805, 0.3828],\n",
       "          ...,\n",
-      "          [0.3559, 0.2707, 0.2027,  ..., 0.3514, 0.3518, 0.3466],\n",
-      "          [0.2638, 0.1811, 0.1295,  ..., 0.3537, 0.3492, 0.3513],\n",
-      "          [0.2024, 0.1135, 0.0718,  ..., 0.3588, 0.3590, 0.3588]],\n",
+      "          [0.2369, 0.1937, 0.1893,  ..., 0.4133, 0.4070, 0.3783],\n",
+      "          [0.2492, 0.1888, 0.1754,  ..., 0.3660, 0.3673, 0.3480],\n",
+      "          [0.2860, 0.2211, 0.1967,  ..., 0.3228, 0.3186, 0.2990]],\n",
       "\n",
-      "         [[0.7496, 0.7262, 0.7094,  ..., 0.4141, 0.3444, 0.2916],\n",
-      "          [0.6591, 0.6377, 0.6240,  ..., 0.4786, 0.4267, 0.3716],\n",
-      "          [0.6179, 0.5986, 0.5871,  ..., 0.4653, 0.5339, 0.4755],\n",
+      "         [[0.6867, 0.6544, 0.5456,  ..., 0.3414, 0.3307, 0.3212],\n",
+      "          [0.6828, 0.6576, 0.5509,  ..., 0.3553, 0.3503, 0.3443],\n",
+      "          [0.6361, 0.6160, 0.5134,  ..., 0.3604, 0.3679, 0.3743],\n",
       "          ...,\n",
-      "          [0.1743, 0.1323, 0.1159,  ..., 0.3545, 0.3539, 0.3516],\n",
-      "          [0.1104, 0.0898, 0.0890,  ..., 0.3521, 0.3492, 0.3484],\n",
-      "          [0.0944, 0.0538, 0.0569,  ..., 0.3549, 0.3533, 0.3569]],\n",
+      "          [0.2965, 0.2044, 0.1699,  ..., 0.4731, 0.4599, 0.4202],\n",
+      "          [0.3088, 0.2082, 0.1700,  ..., 0.4343, 0.4263, 0.3960],\n",
+      "          [0.3389, 0.2432, 0.1955,  ..., 0.3882, 0.3749, 0.3479]],\n",
       "\n",
-      "         [[0.6471, 0.6204, 0.5996,  ..., 0.2923, 0.2414, 0.2141],\n",
-      "          [0.5517, 0.5321, 0.5187,  ..., 0.3564, 0.3153, 0.2823],\n",
-      "          [0.4918, 0.4764, 0.4660,  ..., 0.3645, 0.3893, 0.3555],\n",
+      "         [[0.6433, 0.6288, 0.5341,  ..., 0.3558, 0.3294, 0.3198],\n",
+      "          [0.6507, 0.6473, 0.5568,  ..., 0.3628, 0.3565, 0.3457],\n",
+      "          [0.6094, 0.6134, 0.5282,  ..., 0.3597, 0.3646, 0.3706],\n",
       "          ...,\n",
-      "          [0.0888, 0.0890, 0.1083,  ..., 0.3556, 0.3538, 0.3517],\n",
-      "          [0.0589, 0.0682, 0.0999,  ..., 0.3541, 0.3536, 0.3521],\n",
-      "          [0.0842, 0.0872, 0.1196,  ..., 0.3528, 0.3525, 0.3550]],\n",
+      "          [0.3793, 0.2539, 0.1915,  ..., 0.5443, 0.5202, 0.4714],\n",
+      "          [0.3913, 0.2609, 0.1952,  ..., 0.5198, 0.5010, 0.4594],\n",
+      "          [0.4198, 0.2970, 0.2261,  ..., 0.4763, 0.4539, 0.4185]],\n",
       "\n",
       "         ...,\n",
       "\n",
-      "         [[0.4099, 0.4088, 0.4083,  ..., 0.4058, 0.4040, 0.4027],\n",
-      "          [0.4277, 0.4270, 0.4227,  ..., 0.4001, 0.4063, 0.4076],\n",
-      "          [0.4199, 0.4165, 0.4117,  ..., 0.3982, 0.4027, 0.4013],\n",
+      "         [[0.3586, 0.3583, 0.3615,  ..., 0.3554, 0.3549, 0.3539],\n",
+      "          [0.3472, 0.3456, 0.3561,  ..., 0.3539, 0.3572, 0.3584],\n",
+      "          [0.3516, 0.3568, 0.3666,  ..., 0.3423, 0.3474, 0.3507],\n",
       "          ...,\n",
-      "          [0.3786, 0.3812, 0.3808,  ..., 0.3981, 0.3983, 0.3984],\n",
-      "          [0.3689, 0.3672, 0.3677,  ..., 0.3764, 0.3900, 0.3996],\n",
-      "          [0.3565, 0.3588, 0.3609,  ..., 0.3924, 0.3967, 0.3977]],\n",
+      "          [0.3330, 0.3365, 0.3376,  ..., 0.3499, 0.3509, 0.3517],\n",
+      "          [0.3408, 0.3394, 0.3408,  ..., 0.3485, 0.3446, 0.3439],\n",
+      "          [0.3428, 0.3494, 0.3557,  ..., 0.3447, 0.3435, 0.3441]],\n",
       "\n",
-      "         [[0.4016, 0.4010, 0.4028,  ..., 0.4053, 0.4012, 0.3992],\n",
-      "          [0.4222, 0.4199, 0.4152,  ..., 0.3886, 0.3934, 0.3946],\n",
-      "          [0.4140, 0.4128, 0.4118,  ..., 0.3877, 0.3934, 0.3945],\n",
+      "         [[0.3729, 0.3690, 0.3724,  ..., 0.3665, 0.3641, 0.3614],\n",
+      "          [0.3635, 0.3606, 0.3659,  ..., 0.3635, 0.3644, 0.3648],\n",
+      "          [0.3647, 0.3692, 0.3787,  ..., 0.3553, 0.3571, 0.3595],\n",
       "          ...,\n",
-      "          [0.3699, 0.3692, 0.3701,  ..., 0.4036, 0.4046, 0.4062],\n",
-      "          [0.3597, 0.3603, 0.3614,  ..., 0.3947, 0.4030, 0.4082],\n",
-      "          [0.3460, 0.3477, 0.3500,  ..., 0.3940, 0.3989, 0.4023]],\n",
+      "          [0.3436, 0.3476, 0.3505,  ..., 0.3678, 0.3650, 0.3621],\n",
+      "          [0.3501, 0.3521, 0.3521,  ..., 0.3584, 0.3534, 0.3508],\n",
+      "          [0.3537, 0.3589, 0.3662,  ..., 0.3599, 0.3572, 0.3579]],\n",
       "\n",
-      "         [[0.3915, 0.3911, 0.3967,  ..., 0.3960, 0.3932, 0.3897],\n",
-      "          [0.4035, 0.4042, 0.4014,  ..., 0.3765, 0.3766, 0.3746],\n",
-      "          [0.3956, 0.3985, 0.4029,  ..., 0.3725, 0.3762, 0.3786],\n",
+      "         [[0.3691, 0.3653, 0.3698,  ..., 0.3753, 0.3718, 0.3698],\n",
+      "          [0.3683, 0.3718, 0.3760,  ..., 0.3761, 0.3756, 0.3747],\n",
+      "          [0.3718, 0.3741, 0.3808,  ..., 0.3697, 0.3679, 0.3683],\n",
       "          ...,\n",
-      "          [0.3555, 0.3564, 0.3590,  ..., 0.4037, 0.4037, 0.4041],\n",
-      "          [0.3548, 0.3583, 0.3589,  ..., 0.4023, 0.4051, 0.4089],\n",
-      "          [0.3422, 0.3453, 0.3470,  ..., 0.3913, 0.3989, 0.4022]]]]), tensor([0.]))\n"
+      "          [0.3586, 0.3646, 0.3689,  ..., 0.3832, 0.3818, 0.3791],\n",
+      "          [0.3613, 0.3636, 0.3640,  ..., 0.3763, 0.3720, 0.3707],\n",
+      "          [0.3590, 0.3625, 0.3692,  ..., 0.3756, 0.3730, 0.3743]]]]), tensor([0.]))\n"
      ]
     }
    ],
@@ -246,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -278,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -327,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -345,18 +333,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "TRAIN_RUN = True # To avoid re-running when saving the notebook"
+    "TRAIN_RUN = False # To avoid re-running when saving the notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -367,41 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created SummaryWriter saving to logs/2023-05-25/InkDetector_all_fragments_60k_epochs.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29bdf6e105b24444b5167727216cbb73",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training:   0%|          | 0/60000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils import Trainer, create_writer\n",
+    "TRAINING_EPOCHS = 60000\n",
+    "MODEL_SAVE_PATH = \"trained_models/InkDetector_all_fragments_60k_epochs.pt\"\n",
     "if TRAIN_RUN:\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    optimizer = optim.SGD\n",
     "    \n",
-    "    TRAINING_EPOCHS = 60000\n",
-    "    MODEL_SAVE_PATH = \"InkDetector_all_fragments_60k_epochs\"\n",
     "    \n",
     "    # log to tensorboard\n",
     "    writer = utils.create_writer(model_name=MODEL_SAVE_PATH)\n",
@@ -655,12 +621,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate"
+    "#### Clean up before testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -669,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['BASE_PREFIX', 'BATCH_SIZE', 'BUFFER', 'DEVICE', 'Dict', 'Image', 'In', 'InkDetector', 'LEARNING_RATE', 'List', 'MODEL_SAVE_PATH', 'Optional', 'Out', 'PREFIX', 'Path', 'SimpleNamespace', 'SubvolumeDataset', 'TEST_PREFIX', 'TRAINING_EPOCHS', 'TRAIN_PREFIX', 'TRAIN_RUN', 'Trainer', 'Tuple', 'UndefinedMetricWarning', 'VALIDATION_EPOCHS', 'VALIDATION_RECTS', 'Z_DIM', 'Z_START', 'arr_mask', 'ax', 'axs', 'data', 'defaultdict', 'exit', 'fbeta_score', 'fig', 'gc', 'get_ipython', 'glob', 'i', 'image_shape', 'image_stack', 'images', 'inside_rect', 'json', 'label', 'mask', 'model', 'model_weights', 'mp', 'nn', 'not_border', 'np', 'open', 'optim', 'os', 'output', 'outputs', 'outside_rect', 'patch', 'patches', 'pd', 'pixels_inside_rect', 'pixels_outside_rect', 'plt', 'pred_image', 'pred_images', 'prob', 'quit', 'rect', 'subfigs', 'subvolumes', 'torch', 'tqdm', 'train_dset', 'train_dsets', 'train_loader', 'val_dset', 'val_dsets', 'warnings', 'x', 'y']\n"
+      "['BASE_PREFIX', 'BATCH_SIZE', 'BUFFER', 'DEVICE', 'Dict', 'Image', 'In', 'InkDetector', 'LEARNING_RATE', 'List', 'MODEL_SAVE_PATH', 'Optional', 'Out', 'Path', 'SimpleNamespace', 'TRAINING_EPOCHS', 'TRAIN_RUN', 'Trainer', 'Tuple', 'UndefinedMetricWarning', 'VALIDATION_EPOCHS', 'VALIDATION_RECTS', 'Z_DIM', 'Z_START', 'create_writer', 'data', 'defaultdict', 'exit', 'fbeta_score', 'gc', 'get_ipython', 'get_train_and_val_dsets', 'glob', 'json', 'model', 'model_weights', 'mp', 'nn', 'np', 'open', 'optim', 'os', 'pandas', 'patches', 'plt', 'quit', 'reload', 'show_labels_with_rects', 'test_fragments', 'test_path', 'torch', 'tqdm', 'train_dset', 'train_loader', 'val_dset', 'val_loader', 'warnings']\n"
      ]
     }
    ],
@@ -679,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -687,10 +653,10 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "9583"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,8 +679,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -723,51 +696,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All fragments: [PosixPath('data/test/a'), PosixPath('data/test/b')]\n"
+      "All fragments: ['a', 'b']\n"
      ]
     }
    ],
    "source": [
-    "test_path = Path(TEST_PREFIX)\n",
-    "test_fragments = list(test_path.iterdir())\n",
+    "test_path = Path(BASE_PREFIX) / \"test\"\n",
+    "test_fragments = [p.stem for p in test_path.iterdir()]\n",
     "print(\"All fragments:\", test_fragments)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'utils' from '/home/pvk/Documents/python/ML/scrolls/utils/__init__.py'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import utils\n",
+    "reload(utils)\n",
+    "reload(utils.data_preparation)\n",
+    "reload(utils)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b2b3d16ee3b4b79a39103310cb81acd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading fragment a:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e85333eaa754437847bf62d919b1a0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/334662 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'desc' is an invalid keyword argument for enumerate()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m test_loader \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mDataLoader(test_dset, batch_size\u001b[38;5;241m=\u001b[39mBATCH_SIZE, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, (subvolumes, _) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtqdm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m                                        \u001b[49m\u001b[43mdesc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPredicting on fragment \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mtest_fragment\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     15\u001b[0m         output \u001b[38;5;241m=\u001b[39m model(subvolumes\u001b[38;5;241m.\u001b[39mto(DEVICE))\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39msigmoid()\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[1;32m     16\u001b[0m         outputs\u001b[38;5;241m.\u001b[39mappend(output)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'desc' is an invalid keyword argument for enumerate()"
+     ]
+    }
+   ],
    "source": [
     "# Predict on test fragments\n",
+    "from utils.data_preparation import get_rect_dset\n",
+    "DECISION_BOUNDARY = 0.4\n",
+    "\n",
     "pred_images = []\n",
     "model.eval()\n",
     "for test_fragment in test_fragments:\n",
     "    outputs = []\n",
-    "    test_pixels = get_pixels_using_mask(fragments=[test_fragment])\n",
-    "    eval_dset = SubvolumeDataset(fragments=[test_fragment], voxel_shape=(48, 64, 64), load_inklabels=False,pixels=test_pixels)\n",
-    "    eval_loader = thd.DataLoader(eval_dset, batch_size=BATCH_SIZE, shuffle=False)\n",
+    "    test_dset = get_rect_dset(test_fragment, BASE_PREFIX, z_start=Z_START,\n",
+    "                              z_dim=Z_DIM, buffer=BUFFER)\n",
+    "    test_loader = data.DataLoader(test_dset, batch_size=BATCH_SIZE, shuffle=False)\n",
     "    with torch.no_grad():\n",
-    "        for i, (subvolumes, _) in enumerate(tqdm(eval_loader)):\n",
+    "        for i, (subvolumes, _) in enumerate(tqdm(test_loader, desc=f\"Predicting on fragment {test_fragment}\"):\n",
     "            output = model(subvolumes.to(DEVICE)).view(-1).sigmoid().cpu().numpy()\n",
     "            outputs.append(output)\n",
-    "    # we only load 1 fragment at a time\n",
-    "    image_shape = eval_dset.image_stacks[0].shape[1:]\n",
-    "    eval_dset.labels = None\n",
-    "    eval_dset.image_stacks = None\n",
-    "    del eval_loader\n",
+    "    image_shape = eval_dset.image_stack[0].shape\n",
+    "    \n",
+    "    # clean up\n",
+    "    test_dset.image_stack = None\n",
+    "    del test_loader\n",
     "    gc.collect()\n",
     "\n",
     "    pred_image = np.zeros(image_shape, dtype=np.uint8)\n",
     "    outputs = np.concatenate(outputs)\n",
-    "    for (y, x, _), prob in zip(eval_dset.pixels[:outputs.shape[0]], outputs):\n",
-    "        pred_image[y ,x] = prob > 0.4\n",
+    "    for (y, x, _), prob in zip(test_dset.pixels[:outputs.shape[0]], outputs):\n",
+    "        pred_image[y, x] = prob > DECISION_BOUNDARY\n",
     "    pred_images.append(pred_image)\n",
     "    \n",
     "    eval_dset.pixels = None\n",
     "    del eval_dset\n",
     "    gc.collect()\n",
-    "    print(\"Finished\", test_fragment)"
+    "    print(\"Finished with fragment\", test_fragment)"
    ]
   },
   {
